Add unit test for AddPropertyPath

--- a/RDFSharpUnitTests/RDFSharpUnitTests.csproj
+++ b/RDFSharpUnitTests/RDFSharpUnitTests.csproj
@@ -38,6 +38,9 @@
     <None Update="Files\Test16.ttl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Files\Test17.ttl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Files\Test2.ttl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
