add ORDER BY unit tests

--- a/RDFSharpUnitTests/RDFSharpUnitTests.csproj
+++ b/RDFSharpUnitTests/RDFSharpUnitTests.csproj
@@ -65,6 +65,9 @@
     <None Update="Files\Test24.ttl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Files\Test25.ttl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Files\Test3.ttl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
