add more unit test with Construct query

--- a/RDFSharpUnitTests/RDFSharpUnitTests.csproj
+++ b/RDFSharpUnitTests/RDFSharpUnitTests.csproj
@@ -86,6 +86,12 @@
     <None Update="Files\Test30.ttl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Files\Test31.ttl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\Test32.ttl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Files\Test4.ttl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
